-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.0.0 RC
-
None
-
43f9bc8d95c1427937dac8271aba3e311ece84b3 33f996ba807961f0d76aff32fe243aaf94b89263 (qt/qtwayland/dev)
gent:2020/11/10 00:16:00 build.go:379: include/QtWaylandCompositor/../../src/compositor/compositor_api/qwaylandquickchildren.h:61:46: error: invalid conversion from ‘int (*)(QQmlListProperty<QObject>*)’ to ‘QQmlListProperty<QObject>::CountFunction’ {aka ‘long long int (*)(QQmlListProperty<QObject>*)’} [-fpermissive] agent:2020/11/10 00:16:00 build.go:379: 61 | &className::countFunction, \ agent:2020/11/10 00:16:00 build.go:379: | ^~~~~~~~~~~~~~~~~~~~~~~~~ agent:2020/11/10 00:16:00 build.go:379: | | agent:2020/11/10 00:16:00 build.go:379: | int (*)(QQmlListProperty<QObject>*) agent:2020/11/10 00:16:00 build.go:379: src/compositor/compositor_api/qwaylandkeymap.h:46:5: note: in expansion of macro ‘Q_WAYLAND_COMPOSITOR_DECLARE_QUICK_CHILDREN’ agent:2020/11/10 00:16:00 build.go:379: 46 | Q_WAYLAND_COMPOSITOR_DECLARE_QUICK_CHILDREN(QWaylandKeymap) agent:2020/11/10 00:16:00 build.go:379: | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ agent:2020/11/10 00:16:00 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmlprivate.h:59, agent:2020/11/10 00:16:00 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43, agent:2020/11/10 00:16:00 build.go:379: from include/QtWaylandCompositor/../../src/compositor/global/qtwaylandqmlinclude.h:47, agent:2020/11/10 00:16:00 build.go:379: from include/QtWaylandCompositor/qtwaylandqmlinclude.h:1, agent:2020/11/10 00:16:00 build.go:379: from src/compositor/compositor_api/qwaylandkeymap.h:35, agent:2020/11/10 00:16:00 build.go:379: from src/compositor/compositor_api/qwaylandkeymap.cpp:30: agent:2020/11/10 00:16:00 build.go:379: /home/qt/work/install/include/QtQml/qqmllist.h:76:75: note: initializing argument 4 of ‘QQmlListProperty<T>::QQmlListProperty(QObject*, void*, QQmlListProperty<T>::AppendFunction, QQmlListProperty<T>::CountFunction, QQmlListProperty<T>::AtFunction, QQmlListProperty<T>::ClearFunction) [with T = QObject; QQmlListProperty<T>::AppendFunction = void (*)(QQmlListProperty<QObject>*, QObject*); QQmlListProperty<T>::CountFunction = long long int (*)(QQmlListProperty<QObject>*); qsizetype = long long int; QQmlListProperty<T>::AtFunction = QObject* (*)(QQmlListProperty<QObject>*, long long int); QQmlListProperty<T>::ClearFunction = void (*)(QQmlListProperty<QObject>*)]’ agent:2020/11/10 00:16:00 build.go:379: 76 | QQmlListProperty(QObject *o, void *d, AppendFunction a, CountFunction c, AtFunction t, agent:2020/11/10 00:16:00 build.go:379: | ~~~~~~~~~~~~~~^ agent:2020/11/10 00:16:00 build.go:379: In file included from include/QtWaylandCompositor/qwaylandquickchildren.h:1, agent:2020/11/10 00:16:00 build.go:379: from src/compositor/compositor_api/qwaylandkeymap.h:36, agent:2020/11/10 00:16:00 build.go:379: from src/compositor/compositor_api/qwaylandkeymap.cpp:30: agent:2020/11/10 00:16:00 build.go:379: include/QtWaylandCompositor/../../src/compositor/compositor_api/qwaylandquickchildren.h:62:46: error: invalid conversion from ‘QObject* (*)(QQmlListProperty<QObject>*, int)’ to ‘QQmlListProperty<QObject>::AtFunction’ {aka ‘QObject* (*)(QQmlListProperty<QObject>*, long long int)’} [-fpermissive] agent:2020/11/10 00:16:00 build.go:379: 62 | &className::atFunction, \ agent:2020/11/10 00:16:00 build.go:379: | ^~~~~~~~~~~~~~~~~~~~~~ agent:2020/11/10 00:16:00 build.go:379: | | agent:2020/11/10 00:16:00 build.go:379: | QObject* (*)(QQmlListProperty<QObject>*, int) agent:2020/11/10 00:16:00 build.go:379: src/compositor/compositor_api/qwaylandkeymap.h:46:5: note: in expansion of macro ‘Q_WAYLAND_COMPOSITOR_DECLARE_QUICK_CHILDREN’ agent:2020/11/10 00:16:00 build.go:379: 46 | Q_WAYLAND_COMPOSITOR_DECLARE_QUICK_CHILDREN(QWaylandKeymap) agent:2020/11/10 00:16:00 build.go:379: | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ agent:2020/11/10 00:16:00 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmlprivate.h:59, agent:2020/11/10 00:16:00 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43, agent:2020/11/10 00:16:00 build.go:379: from include/QtWaylandCompositor/../../src/compositor/global/qtwaylandqmlinclude.h:47, agent:2020/11/10 00:16:00 build.go:379: from include/QtWaylandCompositor/qtwaylandqmlinclude.h:1, agent:2020/11/10 00:16:00 build.go:379: from src/compositor/compositor_api/qwaylandkeymap.h:35, agent:2020/11/10 00:16:00 build.go:379: from src/compositor/compositor_api/qwaylandkeymap.cpp:30: agent:2020/11/10 00:16:00 build.go:379: /home/qt/work/install/include/QtQml/qqmllist.h:76:89: note: initializing argument 5 of ‘QQmlListProperty<T>::QQmlListProperty(QObject*, void*, QQmlListProperty<T>::AppendFunction, QQmlListProperty<T>::CountFunction, QQmlListProperty<T>::AtFunction, QQmlListProperty<T>::ClearFunction) [with T = QObject; QQmlListProperty<T>::AppendFunction = void (*)(QQmlListProperty<QObject>*, QObject*); QQmlListProperty<T>::CountFunction = long long int (*)(QQmlListProperty<QObject>*); qsizetype = long long int; QQmlListProperty<T>::AtFunction = QObject* (*)(QQmlListProperty<QObject>*, long long int); QQmlListProperty<T>::ClearFunction = void (*)(QQmlListProperty<QObject>*)]’ agent:2020/11/10 00:16:00 build.go:379: 76 | QQmlListProperty(QObject *o, void *d, AppendFunction a, CountFunction c, AtFunction t, agent:2020/11/10 00:16:00 build.go:379: | ~~~~~~~~~~~^
Details: https://testresults.qt.io/coin/integration/qt/qtwayland/tasks/1604967193
Tested changes (refs/builds/qtci/dev/1604967187):
https://codereview.qt-project.org/c/qt/qtwayland/+/321061/1 Update dependencies on 'dev' in qt/qtwayland
For Gerrit Dashboard: QTBUG-88363 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
321314,2 | Adjust to QQmlListProperty working with qsizetype | dev | qt/qtwayland | Status: MERGED | +2 | 0 |