Adjust to QQmlListProperty working with qsizetype

This is necessary after d7008c79d4ec023527ebfc118ad47f40075f244d in
declarative, which aligned QQmlListProperty with our containers.

Fixes: QTBUG-88363
Change-Id: I6c377396870b9af2614e1e05e69cde2a3cc13e2c
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>